@@ -1,3 +1,3 @@
 explain (int[3][5][7])x
-            ^
-13: error: can not cast into array; did you mean cast into pointer?
+        ^
+9: error: arithmetic or pointer type expected
